--- a/about-us.html
+++ b/about-us.html
@@ -604,7 +604,7 @@
               muted
               autoplay
               loop
-              poster="images/poster.jpg"
+              poster="images/poster-blank.png"
             >
               <source
                 src="images/Eyecatch Architects Logo Animation.mp4"
