--- a/index.html
+++ b/index.html
@@ -1046,7 +1046,7 @@
                         <li class="ss-carousel__item videoBlock overlyText">
                           <video muted autoplay loop>
                             <source
-                              src="/projects/aakruti/1.mp4"
+                              src="/projects/aakruti/Akruthi - Set 2.mp4"
                               type="video/mp4"
                               poster="/images/blank.png"
                             />
@@ -1067,7 +1067,7 @@
                         <li class="ss-carousel__item videoBlock overlyText">
                           <video muted autoplay loop>
                             <source
-                              src="/projects/aakruti/2.mp4"
+                              src="/projects/aakruti/Akruthi - Set 6.mp4"
                               type="video/mp4"
                               poster="/images/blank.png"
                             />
@@ -1086,7 +1086,7 @@
                         <li class="ss-carousel__item videoBlock overlyText">
                           <video muted autoplay loop>
                             <source
-                              src="/projects/aakruti/3.mp4"
+                              src="/projects/aakruti/Akruthi - Set 5.mp4"
                               type="video/mp4"
                               poster="/images/blank.png"
                             />
@@ -1657,7 +1657,7 @@
                         <li class="ss-carousel__item videoBlock">
                           <video muted autoplay loop>
                             <source
-                              src="/projects/padmam/ev.mp4"
+                              src="/projects/padmam/Padmam 1.mp4"
                               type="video/mp4"
                               poster="/images/blank.png"
                             />
@@ -1669,7 +1669,7 @@
                         <li class="ss-carousel__item videoBlock">
                           <video muted autoplay loop>
                             <source
-                              src="/projects/padmam/ev2.mp4"
+                              src="/projects/padmam/Padmam 2.mp4"
                               type="video/mp4"
                               poster="/images/blank.png"
                             />
@@ -1681,7 +1681,7 @@
                         <li class="ss-carousel__item videoBlock">
                           <video muted autoplay loop>
                             <source
-                              src="/projects/padmam/ev3.mp4"
+                              src="/projects/padmam/Padmam 3.mp4"
                               type="video/mp4"
                               poster="/images/blank.png"
                             />
@@ -1991,7 +1991,7 @@
                         <li class="ss-carousel__item videoBlock">
                           <video muted autoplay loop>
                             <source
-                              src="/projects/ladia/Ladia Site Evalution new.mp4"
+                              src="/projects/ladia/ladia site evolution 1.mp4"
                               type="video/mp4"
                               poster="/images/blank.png"
                             />
@@ -2662,7 +2662,7 @@
                         <li class="ss-carousel__item videoBlock">
                           <video muted="" autoplay="" loop="">
                             <source
-                              src="/projects/amyra/sections-new.mp4"
+                              src="/projects/amyra/Amyra.mp4"
                               type="video/mp4"
                               poster="/images/blank.png"
                             />
@@ -2712,7 +2712,7 @@
                         <li class="ss-carousel__item videoBlock">
                           <video muted autoplay loop>
                             <source
-                              src="/projects/amyra/Amyra-Wall-Racks.mp4"
+                              src="/projects/amyra/Amyra - Wall Racks.mp4"
                               type="video/mp4"
                               poster="/images/blank.png"
                             />
@@ -2745,7 +2745,7 @@
                         <li class="ss-carousel__item videoBlock overlyText">
                           <video muted autoplay loop>
                             <source
-                              src="/projects/amyra/Amyra-Display-Counter.mp4"
+                              src="/projects/amyra/Amyra - Display Counter.mp4"
                               type="video/mp4"
                               poster="/images/blank.png"
                             />
@@ -2762,7 +2762,7 @@
                         <li class="ss-carousel__item videoBlock overlyText">
                           <video muted autoplay loop>
                             <source
-                              src="/projects/amyra/Amyra-Cash-Counter.mp4"
+                              src="/projects/amyra/Amyra - Cash Counter.mp4"
                               type="video/mp4"
                               poster="/images/blank.png"
                             />
