--- a/index.html
+++ b/index.html
@@ -3074,6 +3074,17 @@
                             Your browser does not support the video tag.
                           </video>
                         </li>
+                        <li class="ss-carousel__item videoBlock">
+                          <video muted autoplay loop>
+                            <source
+                              src="/projects/goyaz/Comp 3.mp4"
+                              type="video/mp4"
+                              poster="/images/blank.png"
+                            />
+
+                            Your browser does not support the video tag.
+                          </video>
+                        </li>
 
                         <li class="ss-carousel__item videoBlock">
                           <video muted autoplay loop>
