--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
             <li><a href="/index.html">Projects</a></li>
             <li><a href="/news-events.html">News</a></li>
             <li><a href="about-us.html">About</a></li>
-            <li><a href="#">People</a></li>
+            <!-- <li><a href="#">People</a></li> -->
             <li><a href="/careers.html">Careers</a></li>
 
             <li><a href="#">Contact</a></li>
@@ -3957,7 +3957,7 @@
           const items = content.querySelectorAll(".ss-carousel__item");
           const nextButton = component.querySelector(".arrow-next");
           const prevButton = component.querySelector(".arrow-prev");
-          let currentIndex = 0;
+          let currentIndex = 1;
 
           function scrollToCenter(index) {
             if (!items[index]) return;
