--- a/news-events.html
+++ b/news-events.html
@@ -379,7 +379,7 @@
             <li><a href="/index.html">Projects</a></li>
             <li><a href="/news-events.html">News</a></li>
             <li><a href="about-us.html">About</a></li>
-            <li><a href="#">People</a></li>
+            <!-- <li><a href="#">People</a></li> -->
             <li><a href="/careers.html">Careers</a></li>
 
             <li><a href="#">Contact</a></li>
