--- a/index.html
+++ b/index.html
@@ -1418,7 +1418,7 @@
                         <li class="ss-carousel__item videoBlock">
                           <video muted autoplay loop>
                             <source
-                              src="/projects/anubhava/Elevation.mp4"
+                              src="/projects/anubhava/Elevation Video.mp4"
                               type="video/mp4"
                               poster="/images/blank.png"
                             />
