--- a/index.html
+++ b/index.html
@@ -2025,6 +2025,28 @@
                             alt=""
                           />
                         </li>
+                        <li class="ss-carousel__item videoBlock">
+                          <video muted autoplay loop>
+                            <source
+                              src="/projects/ladia/Display Rack 1.mp4"
+                              type="video/mp4"
+                              poster="/images/blank.png"
+                            />
+
+                            Your browser does not support the video tag.
+                          </video>
+                        </li>
+                        <li class="ss-carousel__item videoBlock">
+                          <video muted autoplay loop>
+                            <source
+                              src="/projects/ladia/Display Rack 2.mp4"
+                              type="video/mp4"
+                              poster="/images/blank.png"
+                            />
+
+                            Your browser does not support the video tag.
+                          </video>
+                        </li>
 
                         <li class="ss-carousel__item videoBlock overlyText">
                           <video muted autoplay loop>
