navigation, about to home page and footer

--- a/architecture.html
+++ b/architecture.html
@@ -696,7 +696,7 @@
 
               <!-- Project Item-->
 
-              <footer class="footer">
+              <footer class="footer" id="footer">
                 <div class="footer-section">
                   <div class="footer-link" data-target="emailSection">
                     Email <span class="toggle">+</span>
@@ -722,7 +722,12 @@
                         id="hyderabadAddress"
                         style="display: block"
                       >
-                        <p>XYZ Address</p>
+                        <p class="detailedAddress">
+                          <strong>Eyecatch Architects</strong><br />
+                          Plot No. 710, Flat No. 8-2-293/82/A/710/1, ROAD NO 36,
+                          Jubilee Hills, lane beside US polo Assn, Hyderabad,
+                          Telangana 500033. <br />+91 8125225696<br />contact@eyecatcharchitects.in<br />
+                        </p>
                       </div>
                       <p class="sub-toggle" onclick="toggleAddressVijayawada()">
                         Vijayawada
@@ -732,7 +737,12 @@
                         id="vijayawadaAddress"
                         style="display: none"
                       >
-                        <p>XYZ Address</p>
+                        <p class="detailedAddress">
+                          <strong>Medha Aesthetics Pvt Ltd</strong><br />
+                          MG Rd, Behind Kalaniketan, Mogalrajapuram, Sidhartha
+                          Nagar, Labbipet, Vijayawada, Andhra Pradesh 520010.<br />
+                          +91 96189 02587<br />contact@eyecatcharchitects.in<br />
+                        </p>
                       </div>
                       <p class="sub-toggle" onclick="toggleAddressTamil()">
                         Tamilnadu
@@ -742,7 +752,7 @@
                         id="tamilnaduAddress"
                         style="display: none"
                       >
-                        <p>XYZ Address</p>
+                        <p class="detailedAddress">XYZ Address</p>
                       </div>
                     </div>
                     <div></div>
@@ -754,11 +764,90 @@
                     Social <span class="toggle">+</span>
                   </div>
                   <div class="sub-content" id="socialSection">
-                    <p>Facebook</p>
-                    <p>Twitter</p>
-                    <p>LinkedIn</p>
-                    <p>Instagram</p>
-                    <p>Youtube</p>
+                    <p>
+                      <a
+                        href="https://www.facebook.com/EyeCatchArchitects"
+                        target="_blank"
+                        title="Eyecatch Facebook"
+                        >Facebook
+                        <span class="arrow" style="touch-action: none">
+                          <svg
+                            width="10"
+                            height="10"
+                            viewBox="0 0 10 10"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                            style="touch-action: none"
+                          >
+                            <path
+                              d="M2 1H9V8"
+                              stroke="black"
+                              style="touch-action: none"
+                            ></path>
+                            <path
+                              d="M9 1L1 9"
+                              stroke="black"
+                              style="touch-action: none"
+                            ></path>
+                          </svg> </span
+                      ></a>
+                    </p>
+                    <p>
+                      <a
+                        href="https://www.instagram.com/eyecatcharchitects/"
+                        target="_blank"
+                        title="Eyecatch Facebook"
+                        >Instagram
+                        <span class="arrow" style="touch-action: none">
+                          <svg
+                            width="10"
+                            height="10"
+                            viewBox="0 0 10 10"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                            style="touch-action: none"
+                          >
+                            <path
+                              d="M2 1H9V8"
+                              stroke="black"
+                              style="touch-action: none"
+                            ></path>
+                            <path
+                              d="M9 1L1 9"
+                              stroke="black"
+                              style="touch-action: none"
+                            ></path>
+                          </svg> </span
+                      ></a>
+                    </p>
+                    <p>
+                      <a
+                        href="https://www.linkedin.com/company/eyecatch-architects1"
+                        target="_blank"
+                        title="Eyecatch Facebook"
+                        >LinkedIn
+                        <span class="arrow" style="touch-action: none">
+                          <svg
+                            width="10"
+                            height="10"
+                            viewBox="0 0 10 10"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                            style="touch-action: none"
+                          >
+                            <path
+                              d="M2 1H9V8"
+                              stroke="black"
+                              style="touch-action: none"
+                            ></path>
+                            <path
+                              d="M9 1L1 9"
+                              stroke="black"
+                              style="touch-action: none"
+                            ></path>
+                          </svg> </span
+                      ></a>
+                    </p>
                   </div>
                 </div>
 
@@ -767,10 +856,9 @@
                     Copyright <span class="toggle">+</span>
                   </div>
                   <div class="sub-content" id="copyrightSection">
-                    <p>Privacy Policy</p>
-                    <p>Terms of Use</p>
-                    <p>Legal Disclaimer</p>
-                    <p>Cookie Policy</p>
+                    <p><a href="#">Policy</a></p>
+                    <p><a href="#">Terms of Use</a></p>
+                    <p><a href="#">Legal Disclaimer</a></p>
                   </div>
                 </div>
               </footer>
@@ -827,6 +915,20 @@
       .sub-content p {
         margin: 0;
         padding: 0;
+      }
+      .sub-content p a {
+        color: #000;
+      }
+      #socialSection p {
+        padding-bottom: 5px;
+      }
+      #socialSection p a {
+        text-transform: uppercase;
+      }
+      #socialSection p svg {
+        width: 7px;
+        height: auto;
+        padding-left: 1px;
       }
 
       .sub-content.show {
@@ -1717,6 +1819,23 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
 
       window.addEventListener("resize", () => {
         Object.values(mapInstances).forEach((map) => map.invalidateSize());
+      });
+    </script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        document.querySelectorAll('a[href^="#"]').forEach((anchor) => {
+          anchor.addEventListener("click", function (e) {
+            e.preventDefault();
+
+            const target = document.querySelector(this.getAttribute("href"));
+            if (target) {
+              target.scrollIntoView({
+                behavior: "smooth",
+                block: "start",
+              });
+            }
+          });
+        });
       });
     </script>
   </body>
