--- a/news-events.html
+++ b/news-events.html
@@ -286,6 +286,20 @@
       .detailedAddress strong {
         font-weight: 600;
       }
+      .sub-content p a {
+        color: #000;
+      }
+      #socialSection p {
+        padding-bottom: 5px;
+      }
+      #socialSection p a {
+        text-transform: uppercase;
+      }
+      #socialSection p svg {
+        width: 7px;
+        height: auto;
+        padding-left: 1px;
+      }
 
       @media all and (max-width: 576px) {
         #menu {
@@ -376,13 +390,11 @@
                 <li><a href="/products.html">Products</a></li>
               </ul>
             </li> -->
-            <li><a href="/index.html">Projects</a></li>
+            <li><a href="/">About</a></li>
             <li><a href="/news-events.html">News</a></li>
-            <li><a href="about-us.html">About</a></li>
-            <!-- <li><a href="#">People</a></li> -->
+            <li><a href="/projects.html">Projects</a></li>
             <li><a href="/careers.html">Careers</a></li>
-
-            <li><a href="#">Contact</a></li>
+            <li><a href="#footer">Contact</a></li>
           </ul>
         </div>
       </nav>
@@ -758,7 +770,7 @@
               </div>
               <!-- News Card -->
 
-              <footer class="footer">
+              <footer class="footer" id="footer">
                 <div class="footer-section">
                   <div class="footer-link" data-target="emailSection">
                     Email <span class="toggle">+</span>
@@ -785,10 +797,10 @@
                         style="display: block"
                       >
                         <p class="detailedAddress">
-                          <strong>Eyecatch Architects & Branding</strong><br />
+                          <strong>Eyecatch Architects</strong><br />
                           Plot No. 710, Flat No. 8-2-293/82/A/710/1, ROAD NO 36,
                           Jubilee Hills, lane beside US polo Assn, Hyderabad,
-                          Telangana 500033. <br />Ph No: 8125225696<br />
+                          Telangana 500033. <br />+91 8125225696<br />contact@eyecatcharchitects.in<br />
                         </p>
                       </div>
                       <p class="sub-toggle" onclick="toggleAddressVijayawada()">
@@ -801,9 +813,9 @@
                       >
                         <p class="detailedAddress">
                           <strong>Medha Aesthetics Pvt Ltd</strong><br />
-                          40-2-3/3C,1ST FLOOR, GOUSE STREET, MOGALRAJPURAM
-                          VIJAYAWADA-520010.<br />
-                          Ph No: 96189 02587<br />
+                          MG Rd, Behind Kalaniketan, Mogalrajapuram, Sidhartha
+                          Nagar, Labbipet, Vijayawada, Andhra Pradesh 520010.<br />
+                          +91 96189 02587<br />contact@eyecatcharchitects.in<br />
                         </p>
                       </div>
                       <p class="sub-toggle" onclick="toggleAddressTamil()">
@@ -826,11 +838,90 @@
                     Social <span class="toggle">+</span>
                   </div>
                   <div class="sub-content" id="socialSection">
-                    <p>Facebook</p>
-                    <p>Twitter</p>
-                    <p>LinkedIn</p>
-                    <p>Instagram</p>
-                    <p>Youtube</p>
+                    <p>
+                      <a
+                        href="https://www.facebook.com/EyeCatchArchitects"
+                        target="_blank"
+                        title="Eyecatch Facebook"
+                        >Facebook
+                        <span class="arrow" style="touch-action: none">
+                          <svg
+                            width="10"
+                            height="10"
+                            viewBox="0 0 10 10"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                            style="touch-action: none"
+                          >
+                            <path
+                              d="M2 1H9V8"
+                              stroke="black"
+                              style="touch-action: none"
+                            ></path>
+                            <path
+                              d="M9 1L1 9"
+                              stroke="black"
+                              style="touch-action: none"
+                            ></path>
+                          </svg> </span
+                      ></a>
+                    </p>
+                    <p>
+                      <a
+                        href="https://www.instagram.com/eyecatcharchitects/"
+                        target="_blank"
+                        title="Eyecatch Facebook"
+                        >Instagram
+                        <span class="arrow" style="touch-action: none">
+                          <svg
+                            width="10"
+                            height="10"
+                            viewBox="0 0 10 10"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                            style="touch-action: none"
+                          >
+                            <path
+                              d="M2 1H9V8"
+                              stroke="black"
+                              style="touch-action: none"
+                            ></path>
+                            <path
+                              d="M9 1L1 9"
+                              stroke="black"
+                              style="touch-action: none"
+                            ></path>
+                          </svg> </span
+                      ></a>
+                    </p>
+                    <p>
+                      <a
+                        href="https://www.linkedin.com/company/eyecatch-architects1"
+                        target="_blank"
+                        title="Eyecatch Facebook"
+                        >LinkedIn
+                        <span class="arrow" style="touch-action: none">
+                          <svg
+                            width="10"
+                            height="10"
+                            viewBox="0 0 10 10"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                            style="touch-action: none"
+                          >
+                            <path
+                              d="M2 1H9V8"
+                              stroke="black"
+                              style="touch-action: none"
+                            ></path>
+                            <path
+                              d="M9 1L1 9"
+                              stroke="black"
+                              style="touch-action: none"
+                            ></path>
+                          </svg> </span
+                      ></a>
+                    </p>
                   </div>
                 </div>
 
@@ -839,10 +930,9 @@
                     Copyright <span class="toggle">+</span>
                   </div>
                   <div class="sub-content" id="copyrightSection">
-                    <p>Privacy Policy</p>
-                    <p>Terms of Use</p>
-                    <p>Legal Disclaimer</p>
-                    <p>Cookie Policy</p>
+                    <p><a href="#">Policy</a></p>
+                    <p><a href="#">Terms of Use</a></p>
+                    <p><a href="#">Legal Disclaimer</a></p>
                   </div>
                 </div>
               </footer>
@@ -1081,6 +1171,23 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
       setTimeout(() => {
         if (window.scrollInstance) window.scrollInstance.update();
       }, 500); // allow time for Swiper to render
+    </script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        document.querySelectorAll('a[href^="#"]').forEach((anchor) => {
+          anchor.addEventListener("click", function (e) {
+            e.preventDefault();
+
+            const target = document.querySelector(this.getAttribute("href"));
+            if (target) {
+              target.scrollIntoView({
+                behavior: "smooth",
+                block: "start",
+              });
+            }
+          });
+        });
+      });
     </script>
   </body>
 </html>
