--- a/careers.html
+++ b/careers.html
@@ -327,13 +327,11 @@
                 <li><a href="/products.html">Products</a></li>
               </ul>
             </li> -->
-            <li><a href="/index.html">Projects</a></li>
+            <li><a href="/">About</a></li>
             <li><a href="/news-events.html">News</a></li>
-            <li><a href="about-us.html">About</a></li>
-            <!-- <li><a href="#">People</a></li> -->
+            <li><a href="/projects.html">Projects</a></li>
             <li><a href="/careers.html">Careers</a></li>
-
-            <li><a href="#">Contact</a></li>
+            <li><a href="#footer">Contact</a></li>
           </ul>
         </div>
       </nav>
@@ -464,7 +462,7 @@
           </div>
           <style>
             .job-listing {
-              padding-bottom: 250px;
+              padding-bottom: 100px;
             }
             .job-header {
               font-weight: bold;
@@ -539,12 +537,291 @@
               });
             });
           </script>
+
+          <footer class="footer" id="footer">
+            <div class="footer-section">
+              <div class="footer-link" data-target="emailSection">
+                Email <span class="toggle">+</span>
+              </div>
+              <div class="sub-content" id="emailSection">
+                <p>New Projects: xyz.email.com</p>
+                <p>Press: xyz.email.com</p>
+                <p>Complaints: xyz.email.com</p>
+              </div>
+            </div>
+
+            <div class="footer-section">
+              <div class="footer-link" data-target="officeSection">
+                Offices <span class="toggle">+</span>
+              </div>
+              <div class="sub-content" id="officeSection">
+                <div>
+                  <p class="sub-toggle" onclick="toggleAddressHyd()">
+                    Hyderabad
+                  </p>
+                  <div
+                    class="address"
+                    id="hyderabadAddress"
+                    style="display: block"
+                  >
+                    <p class="detailedAddress">
+                      <strong>Eyecatch Architects</strong><br />
+                      Plot No. 710, Flat No. 8-2-293/82/A/710/1, ROAD NO 36,
+                      Jubilee Hills, lane beside US polo Assn, Hyderabad,
+                      Telangana 500033. <br />+91 8125225696<br />contact@eyecatcharchitects.in<br />
+                    </p>
+                  </div>
+                  <p class="sub-toggle" onclick="toggleAddressVijayawada()">
+                    Vijayawada
+                  </p>
+                  <div
+                    class="address"
+                    id="vijayawadaAddress"
+                    style="display: none"
+                  >
+                    <p class="detailedAddress">
+                      <strong>Medha Aesthetics Pvt Ltd</strong><br />
+                      MG Rd, Behind Kalaniketan, Mogalrajapuram, Sidhartha
+                      Nagar, Labbipet, Vijayawada, Andhra Pradesh 520010.<br />
+                      +91 96189 02587<br />contact@eyecatcharchitects.in<br />
+                    </p>
+                  </div>
+                  <p class="sub-toggle" onclick="toggleAddressTamil()">
+                    Tamilnadu
+                  </p>
+                  <div
+                    class="address"
+                    id="tamilnaduAddress"
+                    style="display: none"
+                  >
+                    <p class="detailedAddress">XYZ Address</p>
+                  </div>
+                </div>
+                <div></div>
+              </div>
+            </div>
+
+            <div class="footer-section">
+              <div class="footer-link" data-target="socialSection">
+                Social <span class="toggle">+</span>
+              </div>
+              <div class="sub-content" id="socialSection">
+                <p>
+                  <a
+                    href="https://www.facebook.com/EyeCatchArchitects"
+                    target="_blank"
+                    title="Eyecatch Facebook"
+                    >Facebook
+                    <span class="arrow" style="touch-action: none">
+                      <svg
+                        width="10"
+                        height="10"
+                        viewBox="0 0 10 10"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                        style="touch-action: none"
+                      >
+                        <path
+                          d="M2 1H9V8"
+                          stroke="black"
+                          style="touch-action: none"
+                        ></path>
+                        <path
+                          d="M9 1L1 9"
+                          stroke="black"
+                          style="touch-action: none"
+                        ></path>
+                      </svg> </span
+                  ></a>
+                </p>
+                <p>
+                  <a
+                    href="https://www.instagram.com/eyecatcharchitects/"
+                    target="_blank"
+                    title="Eyecatch Facebook"
+                    >Instagram
+                    <span class="arrow" style="touch-action: none">
+                      <svg
+                        width="10"
+                        height="10"
+                        viewBox="0 0 10 10"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                        style="touch-action: none"
+                      >
+                        <path
+                          d="M2 1H9V8"
+                          stroke="black"
+                          style="touch-action: none"
+                        ></path>
+                        <path
+                          d="M9 1L1 9"
+                          stroke="black"
+                          style="touch-action: none"
+                        ></path>
+                      </svg> </span
+                  ></a>
+                </p>
+                <p>
+                  <a
+                    href="https://www.linkedin.com/company/eyecatch-architects1"
+                    target="_blank"
+                    title="Eyecatch Facebook"
+                    >LinkedIn
+                    <span class="arrow" style="touch-action: none">
+                      <svg
+                        width="10"
+                        height="10"
+                        viewBox="0 0 10 10"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                        style="touch-action: none"
+                      >
+                        <path
+                          d="M2 1H9V8"
+                          stroke="black"
+                          style="touch-action: none"
+                        ></path>
+                        <path
+                          d="M9 1L1 9"
+                          stroke="black"
+                          style="touch-action: none"
+                        ></path>
+                      </svg> </span
+                  ></a>
+                </p>
+              </div>
+            </div>
+
+            <div class="footer-section">
+              <div class="footer-link" data-target="copyrightSection">
+                Copyright <span class="toggle">+</span>
+              </div>
+              <div class="sub-content" id="copyrightSection">
+                <p><a href="#">Policy</a></p>
+                <p><a href="#">Terms of Use</a></p>
+                <p><a href="#">Legal Disclaimer</a></p>
+              </div>
+            </div>
+          </footer>
         </div>
         <!-- Container-->
       </div>
       <!-- Content Wrapper-->
     </div>
     <!-- Main Wrapper-->
+    <style>
+      .footer {
+        padding: 100px 0 230px 0;
+
+        font-size: 12px;
+        display: flex;
+        justify-content: center;
+        gap: 50px;
+        margin-bottom: 300px;
+      }
+
+      .footer-section {
+        margin: 10px 0;
+        position: relative;
+        min-width: 150px;
+      }
+
+      .footer-link {
+        cursor: pointer;
+        font-size: 14px;
+        margin: 10px 0;
+        display: inline-block;
+        position: relative;
+      }
+
+      .footer-link .toggle {
+        margin-left: 10px;
+        transition: transform 0.3s ease;
+        display: inline-block;
+      }
+
+      .sub-content {
+        max-height: 0;
+        overflow: hidden;
+        transition: all 0.5s ease;
+        opacity: 0;
+      }
+      .address {
+        transition: all 0.5s ease;
+        /* opacity: 0; */
+      }
+      .sub-content p {
+        margin: 0;
+        padding: 0;
+      }
+      .sub-content p a {
+        color: #000;
+      }
+      #socialSection p {
+        padding-bottom: 5px;
+      }
+      #socialSection p a {
+        text-transform: uppercase;
+      }
+      #socialSection p svg {
+        width: 7px;
+        height: auto;
+        padding-left: 1px;
+      }
+
+      .sub-content.show {
+        max-height: 500px; /* Large enough to hold content */
+        opacity: 1;
+        /* padding-top: 10px; */
+      }
+
+      .sub-toggle {
+        /* color: #00bcd4; */
+        cursor: pointer;
+        margin-top: 10px;
+        font-weight: bold;
+      }
+      .detailedAddress {
+        max-width: 200px;
+      }
+      .detailedAddress strong {
+        font-weight: 600;
+      }
+
+      .moreInfo {
+        text-align: right;
+        align-self: end;
+        vertical-align: bottom;
+        /* margin-top: 30px; */
+      }
+      .moreInfo h4 {
+        text-transform: uppercase;
+        color: #787878;
+        margin: 0;
+        padding: 0;
+        font-weight: normal;
+        font-size: 14px;
+      }
+      .moreInfo p {
+        text-transform: uppercase;
+        color: #000;
+        margin: 3px 0 20px 0;
+        padding: 0;
+        font-weight: normal;
+        font-size: 14px;
+      }
+
+      @media screen and (max-width: 768px) {
+        .headerContainer {
+          padding-left: 10px;
+          padding-right: 10px;
+        }
+        .topNav {
+          display: none;
+        }
+      }
+    </style>
 
     <style>
       html,
@@ -607,6 +884,60 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
       });
     </script> -->
     <script>
+      // Toggle Main Sections
+      document.querySelectorAll(".footer-link").forEach((link) => {
+        link.addEventListener("click", function () {
+          const targetId = this.getAttribute("data-target");
+          const subContent = document.getElementById(targetId);
+          const toggleSymbol = this.querySelector(".toggle");
+
+          // Close all open sections
+          document.querySelectorAll(".sub-content").forEach((content) => {
+            if (content.id !== targetId) {
+              content.classList.remove("show");
+            }
+          });
+          document.querySelectorAll(".toggle").forEach((toggle) => {
+            if (toggle !== toggleSymbol) {
+              toggle.textContent = "+";
+              toggle.style.transform = "rotate(0deg)";
+            }
+          });
+
+          // Toggle current section
+          if (subContent.classList.contains("show")) {
+            subContent.classList.remove("show");
+            toggleSymbol.textContent = "+";
+            toggleSymbol.style.transform = "rotate(0deg)";
+          } else {
+            subContent.classList.add("show");
+            toggleSymbol.textContent = "-";
+            toggleSymbol.style.transform = "rotate(180deg)";
+          }
+        });
+      });
+
+      // Toggle Vijayawada Address
+      function toggleAddressHyd() {
+        document.getElementById("hyderabadAddress").style.display = "block";
+        document.getElementById("vijayawadaAddress").style.display = "none";
+        document.getElementById("tamilnaduAddress").style.display = "none";
+      }
+
+      // Toggle Tamilnadu Address
+      function toggleAddressTamil() {
+        document.getElementById("hyderabadAddress").style.display = "none";
+        document.getElementById("vijayawadaAddress").style.display = "none";
+        document.getElementById("tamilnaduAddress").style.display = "block";
+      }
+
+      function toggleAddressVijayawada() {
+        document.getElementById("hyderabadAddress").style.display = "none";
+        document.getElementById("vijayawadaAddress").style.display = "block";
+        document.getElementById("tamilnaduAddress").style.display = "none";
+      }
+    </script>
+    <script>
       function toggleSubmenu(el) {
         const parentLi = el.closest("li.has-submenu");
         const icon = el.querySelector(".submenu-icon");
@@ -618,6 +949,23 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
           icon.textContent = "+";
         }
       }
+    </script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        document.querySelectorAll('a[href^="#"]').forEach((anchor) => {
+          anchor.addEventListener("click", function (e) {
+            e.preventDefault();
+
+            const target = document.querySelector(this.getAttribute("href"));
+            if (target) {
+              target.scrollIntoView({
+                behavior: "smooth",
+                block: "start",
+              });
+            }
+          });
+        });
+      });
     </script>
   </body>
 </html>
