navigation, about to home page and footer

--- a/architecture.html
+++ b/architecture.html
@@ -702,9 +702,24 @@
                     Email <span class="toggle">+</span>
                   </div>
                   <div class="sub-content" id="emailSection">
-                    <p>New Projects: xyz.email.com</p>
-                    <p>Press: xyz.email.com</p>
-                    <p>Complaints: xyz.email.com</p>
+                    <p>
+                      New Projects:
+                      <a href="mailto:pranay@eyecatcharchitects.com"
+                        >pranay@eyecatcharchitects.com</a
+                      >
+                    </p>
+                    <p>
+                      Contact:
+                      <a href="mailto:contact@eyecatcharchitects.com"
+                        >contact@eyecatcharchitects.com</a
+                      >
+                    </p>
+                    <p>
+                      Careers:
+                      <a href="mailto:hr@eyecatcharchitects.com"
+                        >hr@eyecatcharchitects.com</a
+                      >
+                    </p>
                   </div>
                 </div>
 
@@ -907,6 +922,9 @@
         overflow: hidden;
         transition: all 0.5s ease;
         opacity: 0;
+      }
+      .sub-content a {
+        color: #000;
       }
       .address {
         transition: all 0.5s ease;
