--- a/projects.html
+++ b/projects.html
@@ -1705,7 +1705,7 @@
                         <li class="ss-carousel__item videoBlock">
                           <video muted autoplay loop>
                             <source
-                              src="/projects/padmam/Padmam Video.mp4"
+                              src="/projects/padmam/Padmam.mp4"
                               type="video/mp4"
                               poster="/images/blank.png"
                             />
@@ -3254,11 +3254,29 @@
                     Email <span class="toggle">+</span>
                   </div>
                   <div class="sub-content" id="emailSection">
-                    <p>New Projects: xyz.email.com</p>
-                    <p>Press: xyz.email.com</p>
-                    <p>Complaints: xyz.email.com</p>
+                    <p>
+                      New Projects:
+                      <a href="mailto:pranay@eyecatcharchitects.com"
+                        >pranay@eyecatcharchitects.com</a
+                      >
+                    </p>
+                    <p>
+                      Contact:
+                      <a href="mailto:contact@eyecatcharchitects.com"
+                        >contact@eyecatcharchitects.com</a
+                      >
+                    </p>
+                    <p>
+                      Careers:
+                      <a href="mailto:hr@eyecatcharchitects.com"
+                        >hr@eyecatcharchitects.com</a
+                      >
+                    </p>
                   </div>
                 </div>
+                New Projects: pranay@eyecatcharchitects.com Contact:
+                contact@eyecatcharchitects.com Careers:
+                hr@eyecatcharchitects.com
 
                 <div class="footer-section">
                   <div class="footer-link" data-target="officeSection">
@@ -3461,6 +3479,9 @@
         overflow: hidden;
         transition: all 0.5s ease;
         opacity: 0;
+      }
+      .sub-content a {
+        color: #000;
       }
       .address {
         transition: all 0.5s ease;
