navigation, about to home page and footer

--- a/index.html
+++ b/index.html
@@ -571,6 +571,12 @@
         .col12 {
           width: 100%;
         }
+        #clients .rowG50 {
+          margin-bottom: 30px;
+        }
+        #clients img {
+          border: 1px solid #ddd;
+        }
         @media all and (max-width: 576px) {
           .contentAbt {
             width: 96%;
@@ -857,33 +863,66 @@
               <div class="sectionHead parallax-section">
                 <h2>Our Clients</h2>
               </div>
-              <div class="rowG50 borderBottom parallax-section">
+              <div class="rowG50 parallax-section">
                 <div class="col2">
-                  <img
-                    src="images/clients/MITHAI-POTLAM-150x150.jpg"
-                    class="w100"
-                  />
+                  <img src="images/clients/c1.jpg" class="w100" />
                 </div>
                 <div class="col2">
-                  <img src="images/clients/NARAYANI-150x150.jpg" class="w100" />
+                  <img src="images/clients/c2.jpg" class="w100" />
                 </div>
                 <div class="col2">
-                  <img src="images/clients/KALANJAI-150x150.jpg" class="w100" />
+                  <img src="images/clients/c3.jpg" class="w100" />
                 </div>
                 <div class="col2">
-                  <img
-                    src="images/clients/VRK-SILKS-150x150.jpg"
-                    class="w100"
-                  />
+                  <img src="images/clients/c4.jpg" class="w100" />
                 </div>
                 <div class="col2">
-                  <img src="images/clients/VIVANTA.jpg" class="w100" />
+                  <img src="images/clients/c5.jpg" class="w100" />
                 </div>
                 <div class="col2">
-                  <img
-                    src="images/clients/TAJ-DECCAN-150x150.jpg"
-                    class="w100"
-                  />
+                  <img src="images/clients/c6.jpg" class="w100" />
+                </div>
+              </div>
+
+              <div class="rowG50 parallax-section">
+                <div class="col2">
+                  <img src="images/clients/c7.jpg" class="w100" />
+                </div>
+                <div class="col2">
+                  <img src="images/clients/c8.jpg" class="w100" />
+                </div>
+                <div class="col2">
+                  <img src="images/clients/c9.jpg" class="w100" />
+                </div>
+                <div class="col2">
+                  <img src="images/clients/c10.jpg" class="w100" />
+                </div>
+                <div class="col2">
+                  <img src="images/clients/c11.jpg" class="w100" />
+                </div>
+                <div class="col2">
+                  <img src="images/clients/c12.jpg" class="w100" />
+                </div>
+              </div>
+
+              <div class="rowG50 parallax-section">
+                <div class="col2">
+                  <img src="images/clients/c13.jpg" class="w100" />
+                </div>
+                <div class="col2">
+                  <img src="images/clients/c14.jpg" class="w100" />
+                </div>
+                <div class="col2">
+                  <img src="images/clients/c15.jpg" class="w100" />
+                </div>
+                <div class="col2">
+                  <img src="images/clients/c16.jpg" class="w100" />
+                </div>
+                <div class="col2">
+                  <img src="images/clients/c17.jpg" class="w100" />
+                </div>
+                <div class="col2">
+                  <img src="images/clients/c18.jpg" class="w100" />
                 </div>
               </div>
             </section>
