--- a/projects.html
+++ b/projects.html
@@ -659,7 +659,7 @@
                         <li class="ss-carousel__item videoBlock">
                           <video muted autoplay loop>
                             <source
-                              src="/projects/smart-furniture/Smart Furniture Video.mp4"
+                              src="/projects/smart-furniture/Smart Furniture Site View.mp4"
                               type="video/mp4"
                               poster="/images/blank.png"
                             />
@@ -2277,7 +2277,7 @@
                             <div class="moreInfo">
                               <div>
                                 <h4>Client</h4>
-                                <p>Akhil</p>
+                                <p>Bayya Vasu & Bayya Ravi</p>
                               </div>
                               <div>
                                 <h4>Typology</h4>
@@ -2285,7 +2285,7 @@
                               </div>
                               <div>
                                 <h4>Size</h4>
-                                <p>2500 S.ft</p>
+                                <p>30,000 S.ft</p>
                               </div>
                               <div>
                                 <h4>Status</h4>
@@ -2344,7 +2344,7 @@
                         <li class="ss-carousel__item videoBlock">
                           <video muted autoplay loop>
                             <source
-                              src="/projects/kps/Kps Elevation Video.mp4"
+                              src="/projects/kps/Kps Elevation Video1.mp4"
                               type="video/mp4"
                               poster="/images/blank.png"
                             />
@@ -2425,7 +2425,7 @@
                         <li class="ss-carousel__item videoBlock">
                           <video muted autoplay loop>
                             <source
-                              src="/projects/kps/Kps Full Video.mp4"
+                              src="/projects/kps/Kps-Full Video1.mp4"
                               type="video/mp4"
                               poster="/images/blank.png"
                             />
